--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
     "lucide-react": "^0.546.0",
+    "moment": "^2.30.1",
     "next": "^15.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "drizzle-kit": "^0.31.5",
