--- a/package.json
+++ b/package.json
@@ -22,17 +22,23 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
+    "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.546.0",
     "moment": "^2.30.1",
     "next": "^15.5.6",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
+    "postprocessing": "^6.37.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-speech-to-text": "^0.8.0",
+    "react-icons": "^5.5.0",
     "react-webcam": "^7.2.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.181.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
