--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "^15.5.6",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
+    "pdf-parse": "^2.4.5",
     "postprocessing": "^6.37.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
